@@ -9,6 +9,10 @@ Version 0.6.8.1                             "Don hat"
     - correctly recognise dependencies solved by Multi-Arch:
       foreign packages (LP: #968412)
 
+- Internal changes:
+
+  * Add (temporary) helpers for interacting with dpkg.
+
 [5/11/2012]
 Version 0.6.8                               "Never need a reason,
                                              never need a rhyme"
